--- a/static/form.html
+++ b/static/form.html
@@ -6,8 +6,15 @@
     <body>
         <div>
             <form method="post" action="/form">
-                <label for="name">Name</label>
+                <label for="name">Name:</label>
                 <input type="text" name="name" id="name">
+
+                <br>
+
+                <label for="age">Addres: </label>
+                <input type="text" name="address" id="address">
+
+                <br>
 
                 <input type="submit" value="submit">
             </form>
